<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TextRepeaterActivity">

        <RelativeLayout
            android:id="@+id/mainRelative"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/ic_curve"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/toolBarLayout"
                layout="@layout/toolbar_layout" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="-60dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_below="@id/mainRelative"
            android:layout_above="@id/ads_container">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:weightSum="1"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/edChatTextL"
                    android:layout_weight="0.2"
                    app:errorEnabled="true"
                    android:layout_marginHorizontal="16dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edChatText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text"
                        android:gravity="top"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/edRepeatNumberL"
                    app:errorEnabled="true"
                    android:layout_weight="0.2"
                    android:layout_marginHorizontal="16dp"
                   >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edRepeatNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/newLine"

                    android:layout_marginStart="15dp"
                    android:text="newline"/>
                <Button
                    android:id="@+id/repeatTextBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.1"
                    android:background="@drawable/btn_back"
                    android:text="@string/Repeat"
                    android:textColor="@color/white" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="0.4">
                    <TextView
                        android:id="@+id/textShowView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/outline"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:scrollbars="vertical"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center_horizontal"
                    android:layout_weight="0.1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/shareBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/btn_back"
                        android:text="@string/share"
                        android:textColor="@color/white"

                        />

                    <Button
                        android:id="@+id/cleartext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/btn_back"
                        android:text="@string/clear"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/copyBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/btn_back"
                        android:text="@string/copy"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/ads_container"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/loading_ad"
            android:textColor="@color/black90"
            android:textSize="14sp" />
    </FrameLayout>
</RelativeLayout>
</layout>
