<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activity.DirectMessageActivity">

        <RelativeLayout
            android:id="@+id/mainRelative"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/ic_curve"
            >
            <include
                android:id="@+id/toolBarLayout"
                layout="@layout/toolbar_layout" />
        </RelativeLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="-60dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="5dp">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <TextView
                   android:id="@+id/note"
                   android:layout_margin="16dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:gravity="center_horizontal"
                   android:fontFamily="@font/nunitobold"
                   android:text="@string/Select_country_code"
                   android:textColor="@color/textColor"
                   android:textSize="15sp"
                   />
               <com.hbb20.CountryCodePicker
                   android:id="@+id/countryCode"
                   android:layout_margin="5dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:background="@color/white"
                   />
               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/edMobileNumberL"
                   app:errorEnabled="true"
                   android:layout_margin="16dp"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                  <com.google.android.material.textfield.TextInputEditText
                      android:id="@+id/edMobileNumber"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/enternumber"
                      android:inputType="phone"
                      android:textSize="16sp"/>

               </com.google.android.material.textfield.TextInputLayout>
               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="16dp"
                   android:id="@+id/edTextMsgL"

                   app:errorEnabled="true"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/edTextMsg"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/entermessage"
                       android:textSize="16sp"
                       android:imeOptions="actionDone"
                       android:layout_gravity="center"
                       android:inputType="textMultiLine"
                       android:maxLines="2"/>

               </com.google.android.material.textfield.TextInputLayout>
               <Button
                   android:id="@+id/btSendMsg"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:paddingHorizontal="10dp"
                   android:layout_marginBottom="16dp"
                   android:background="@drawable/btn_back"
                   android:text="@string/send"
                   />
           </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <FrameLayout
        android:id="@+id/ads_container"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/loading_ad"
            android:textColor="@color/black90"
            android:textSize="14sp" />
    </FrameLayout>
</RelativeLayout>
</layout>