<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.StatusSaverActivity">

        <include
            android:id="@+id/toolBarLayout"
            layout="@layout/toolbar_layout" />

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolBarLayout"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/statusView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/ic_statuselector"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="8dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_status_download"
                    app:tint="@color/white">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/status"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/savedView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/ic_statuselector"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="8dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_saved_status"
                    app:tint="@color/white">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/saved"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ll1"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <TextView
            android:id="@+id/permissionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:text="@string/allow_this_permission_to_use_this_feature"
            android:textColor="@color/maincolor"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/permissionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/permissionText"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:paddingHorizontal="15dp"
            android:text="@string/required_permission"
            android:textSize="16sp"
            android:paddingVertical="5dp"
            android:background="@drawable/circleoutline"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/ads_container"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/loading_ad"
                android:textColor="@color/black90"
                android:textSize="14sp" />
        </FrameLayout>
    </RelativeLayout>
</layout>
