<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:id="@+id/appimage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:id="@+id/appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:scrollHorizontally="true"
                android:marqueeRepeatLimit="marquee_forever"/>
            <TextView
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="3dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/download"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:background="@drawable/btn_back"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="2dp"
            android:text="@string/ad"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:paddingVertical="2dp"
            android:paddingHorizontal="5sp"
            android:background="@drawable/btn_back"
            android:backgroundTint="@color/yellow"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>