<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        android:orientation="vertical"
        app:cardElevation="1dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imgExit"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_exit_icon"/>
            <TextView
                android:id="@+id/tvExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="10dp"
                android:text="@string/Exit"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/tv_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/are_you_sure_you_want_to_exit"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/greyshade"
                android:gravity="center_horizontal" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/btnNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/No"
                    android:background="@drawable/btn_back"
                    android:backgroundTint="#45cd75"
                    android:paddingVertical="7dp"
                    android:layout_marginHorizontal="10dp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/btnExit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Exit"
                    android:background="@drawable/btn_back"
                    android:backgroundTint="#f2514e"
                    android:paddingVertical="7dp"
                    android:layout_marginHorizontal="10dp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/ads_container"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/loading_ad"
                    android:textSize="15sp"
                    android:textColor="@color/black90"/>
            </FrameLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>